2004-01-05  Filip Navara  <xnavara@volny.cz>

	* include/prsht.h (LPCPROPSHEETPAGEW): Fix definition.
	* include/shlwapi.h (SHRegQueryInfoUSKey[AW]): Fix prototype.
	* include/cpl.h (CPL_STARTWPARMS[AW]): Correct.
	* include/shellapi.h (ABS_AUTOHIDE, ABS_ALWAYSONTOP,
	SEE_MASK_NO_CONSOLE, SEE_MASK_ASYNCOK, SEE_MASK_HMONITOR,
	FOF_NOCOPYSECURITYATTRIBS): Add defines.
	* include/shlobj.h (BFFM_SETOKTEXT, BFFM_SETEXPANDED,
	CSIDL_FLAG_DONT_VERIFY, CSIDL_FLAG_CREATE, CSIDL_FLAG_MASK,
	CFSTR_INETURL[AW], SHGDN_FOREDITING, SHGDN_FORADDRESSBAR,
	SSF_*): Add defines.
	(SHCNF_PATH[AW], SHCNF_PRINTER[AW], CFSTR_FILENAME[AW],
	CFSTR_FILENAMEMAP[AW], CFSTR_FILEDESCRIPTOR[AW], CFSTR_SHELLURL,
	CMDSTR_NEWFOLDER[AW], CMDSTR_VIEWLIST[AW], CMDSTR_VIEWDETAILS[AW]):
	Correct.
	(IEnumIDList): Add COBJMACROS.
	* include/winuser.h (MIM_*): Add define.

2004-01-04  Filip Navara  <xnavara@volny.cz>

	* include/shlguid.h (IID_IPersistFolder2, IID_IPersistFolder3,
	IID_IShellFolder2, IID_IFileSystemBindData): Add declarations.
	* include/shlobj.h (EXTRASEARCH, SHCOLSTATEF, SHELLDETAILS,
	PERSIST_FOLDER_TARGET_INFO): Define structures.
	(IEnumExtraSearch, IShellFolder2, IFileSystemBindData,
	IPersistFolder2, IPersistFolder3): Add COM interface
	definitions.
	(IExtractIcon[AW], IShellLink[AW], IPersistFolder, IShellView,
	ICommDlgBrowser, IShellFolder2, IPersistFolder2, IPersistFolder3):
	Add COBJMACROS.
	(SHCreateDirectoryEx[AW], SHBindToParent): Add prototypes.
        * lib/shell32.c	(IID_IPersistFolder2, IID_IPersistFolder3,
	IID_IShellFolder2, IID_IFileSystemBindData): Add definitions.

2004-01-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/mshtml.h (IHTMLDocument2): Correct write, writeln
	declarations.
	Thanks to: Rene Nyffenegger <renenyffenegger@users.sf.net>.

2004-01-03  Filip Navara  <xnavara@volny.cz>

	* include/cguid.h (CLSID_StdGlobalInterfaceTable): Declare IID.
	* include/oaidl.h (ITypeLib2, ITypeInfo2): Define interfaces,
	declare IID's.