@@ -41,7 +41,7 @@ extern "C" {
   #define SCSIPORTAPI DECLSPEC_IMPORT
 #endif
 
-#if DBG
+#ifdef DBG
 #define DebugPrint(x) ScsiDebugPrint x
 #else
 #define DebugPrint(x)
@@ -64,7 +64,7 @@ typedef PHYSICAL_ADDRESS SCSI_PHYSICAL_ADDRESS, *PSCSI_PHYSICAL_ADDRESS;
 
 #define MAXIMUM_CDB_SIZE                  12
 
-#if DBG
+#ifdef DBG
 #define SCSI_PORT_SIGNATURE               0x54524f50
 #endif
 
