@@ -129,6 +129,7 @@ typedef struct _UNICODE_STRING {
   USHORT MaximumLength;
   PWSTR Buffer;
 } UNICODE_STRING, *PUNICODE_STRING;
+typedef const UNICODE_STRING* PCUNICODE_STRING;
 typedef struct _STRING {
   USHORT Length;
   USHORT MaximumLength;
